# shorturl_backend

./: .dockerignore  .gitignore  Dockerfile  DockerfileNginx  README.md  docker-compose.yml  docker-mongodb.yml  docker-redis.yml  pyproject.toml
app/: .env  app.py  gunicorn_conf.py
app/api/: AuthAPI.py  KeyAPI.py  UrlAPI.py  UserAPI.py
app/api_v2/: __init__.py
app/common/: BeforeRequest.py  Response.py  ReturnCode.py
app/common/cache/: JWTAuth.py
app/config/: logging.py  setting.py
app/crud/: CRUDKey.py  CRUDUrl.py  CRUDUser.py
app/database/: MongoConn.py  RedisConn.py
app/database/migration/: MongoInit.py
app/schemas/: Key.py  Url.py  User.py
app/utils/: APIKey.py  Base64Key.py  JWT.py
docker/nginx/: nginx.conf
tests/: test_app.py  test_auth.py  test_url.py
